2008-11-07  Jürg Billeter  <j@bitron.ch>

	* vala/valaforeachstatement.vala:
	* vala/valasemanticanalyzer.vala:

	Move foreach statement checking to ForeachStatement.check

2008-11-07  Jürg Billeter  <j@bitron.ch>

	* vala/valaelementaccess.vala:
	* vala/valasemanticanalyzer.vala:

	Move element access checking to ElementAccess.check

2008-11-07  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagirparser.vala:

	Set source_reference in parsed nodes

2008-11-06  Jürg Billeter  <j@bitron.ch>

	* vala/valamethod.vala:
	* vala/valasemanticanalyzer.vala:

	Move method checking to Method.check

2008-11-06  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:
	* vala/valasemanticanalyzer.vala:

	Move class checking to Class.check

2008-11-06  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodedynamicsignalmodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valagerrormodule.vala:
	* gobject/valagobjectmodule.vala:

	Move dynamic signal generation to GObjectModule and
	DBusClientModule

2008-11-06  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodedynamicpropertymodule.vala:
	* gobject/valaccodedynamicsignalmodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valagobjectmodule.vala:

	Move dynamic property generation to GObjectModule and
	DBusClientModule

2008-11-06  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valagobjectmodule.vala:

	Move constructor code generation to GObjectModule

2008-11-05  Jürg Billeter  <j@bitron.ch>

	* vala/valainvocationexpression.vala:
	* vala/valasemanticanalyzer.vala:

	Move invocation expression checking to InvocationExpression.check

2008-11-05  Jürg Billeter  <j@bitron.ch>

	* vala/valamemberaccess.vala:
	* vala/valasemanticanalyzer.vala:

	Move member access checking to MemberAccess.check

2008-11-05  Jürg Billeter  <j@bitron.ch>

	* vala/valabinaryexpression.vala: