@@ -1,5 +1,12 @@
 2008-11-07  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valareturnstatement.vala:
+	* vala/valasemanticanalyzer.vala:
+
+	Move return statement checking to ReturnStatement.check
+
+2008-11-07  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valaforeachstatement.vala:
 	* vala/valasemanticanalyzer.vala:
 
